@@ -26,6 +26,8 @@ Version 1.5.10+svn:
      game chat.
    * Fixed a glitch where the Gryphon wing was drawn over the fog and
      reachmap
+   * When moving up or down in a listbox with a horizontal scrollbar, the
+     listbox no longer changes the position of the horizontal scrollbar
 
 Version 1.5.10:
  * Campaigns:
